--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   font-size: 20px;
   /* Set line height to be 1.5 times larger than default */
  /* line-height: 150%;*/
-  
+
   text-align: justify;
 
  /* background-image: url('../img/background.jpg');
@@ -17,7 +17,7 @@ body {
 header {
    /*Set text alignment to center */
   text-align: center;
-  
+
 }
 
 main {
@@ -44,11 +44,6 @@ a:hover
 .container {
     position: fixed;
       z-index: -1;
-}
-
-#block
-{
-
 }
 
 .iam {
@@ -94,11 +89,11 @@ a:hover
     padding: 4px 10px;
     margin: 2px 2px;
     cursor: pointer;
-    
+
 
 }
 .button1:hover {
-   
+
     color: black;
 }
 
@@ -116,20 +111,11 @@ a:hover
     margin: 2px 2px;
     cursor: pointer;
 }
+
 .button2:hover {
-   
     color: black;
 }
 
-.face {
-
-  max-width: 80%;
-  padding-left: 10%;
-  height: auto;
-  opacity: 1 ;
-  /*padding-top: 20%;
-  padding-bottom: 1%;*/
-}
 .back {
   /*position: absolute;*/
   max-width: 100%;
@@ -138,19 +124,20 @@ a:hover
 
 }
 
-.col
-{
-    -webkit-column-count: 3; /* Chrome, Safari, Opera */
-    -moz-column-count: 3; /* Firefox */
-    column-count: 3;
-    column-gap: 30px;
+.col {
     font-family: Palatino,"Palatino Linotype","Palatino LT STD","Book Antiqua",Georgia,serif;
     text-align: center;
+    display: flex;
+}
+
+.column{
+  width: 33%;
+  align-self: center;
 }
 
 .header {
     background-color: #63B4D1;
-    width: 100%;						
+    width: 100%;
     position: fixed;
     top: 0;
     right: 0px;
@@ -170,10 +157,12 @@ a:hover
 }
 
 
-.box{background-color: white;
-padding-bottom: 1%;
-padding-left: 8%;
-padding-right: 8%; }
+.box {
+  background-color: white;
+  padding-bottom: 1%;
+  padding-left: 8%;
+  padding-right: 8%;
+}
 
 .intro
 {
@@ -187,22 +176,11 @@ padding-right: 8%; }
   padding-top: 3%;
 }
 
-.space{ padding-bottom: 50%; }
-
 .about
 {
   font-size: 120%;
   font-family: Verdana, Geneva, sans-serif;
   color: #12027c;
-  padding-top: 40%;
-}
-
-.about2
-{
-  font-size: 120%;
-  font-family: Verdana, Geneva, sans-serif;
-  color: #12027c;
-  padding-top: 46.5%;
 }
 
 .headtext
@@ -238,8 +216,8 @@ footer {
 
 .padP {padding-top: 12%;}
 
-.boxP
-{
+.boxP {
+    display: inline-block;
     background-color: white;
     padding-bottom: 4%;
     padding-left: 8%;
