Added Garbage Collecting and Sorting Robot
Added details of 1B project into portfolio

--- a/css/media.css
+++ b/css/media.css
@@ -168,6 +168,17 @@
     font-size: 80%;
     /*color: orange;*/
   }
+
+  .cont
+  {
+    max-width: 100%;
+  }
+
+  .column
+  {
+    align-self: stretch;
+  }
+
   .col
   {
     -webkit-column-count: 1;
