--- a/css/style3.css
+++ b/css/style3.css
@@ -150,3 +150,55 @@
 	font-family: Georgia, Times, "Times New Roman", serif;
 
 }
+
+#robot1
+{
+	padding-left: 19%;
+	padding-bottom: 2%;
+	max-width: 100%;
+}
+#robot2
+{
+	padding-left: 2%;
+	max-width: 30%;
+}
+#robot3
+{
+	padding-left: 10%;
+	padding-bottom: 5%;
+	max-width: 15%;
+}
+#robot4
+{
+	padding-left: 5%;
+	padding-bottom: 3%;
+	max-width: 20%;
+}
+#robot5
+{
+	padding-left: 5%;
+	max-width: 30%;
+}
+#robot6
+{
+	padding-left: 17%;
+	padding-bottom: 1%;
+	max-width: 30%;
+}
+#robot7
+{
+	padding-left: 2%;
+	max-width: 30%;
+}
+#robot8
+{
+	padding-left: 9%;
+	padding-top: 2%;
+	max-width: 80%;
+}
+
+#robot9
+{
+	padding-left: 27%;
+	max-width: 50%;
+}
