--- a/css/style3.css
+++ b/css/style3.css
@@ -210,3 +210,37 @@
 	max-width: 50%;
 }
 
+#planets1
+{
+	max-width: 30%;
+	padding-left: 3%;
+}
+#planets2
+{
+	max-width: 100%;
+	padding-bottom: 8%;
+	padding-left: 1%;
+}
+#planets3
+{
+	max-width: 100%;
+	padding-left: 0%;
+}
+#planets4
+{
+	max-width: 50%;
+	padding-bottom: 0%;
+	padding-left: 4%;
+}
+#planets5
+{
+	max-width: 50%;
+	padding-bottom: 5%;
+	padding-left: 0%;
+}
+#planets6
+{
+	max-width: 100%;
+	padding-bottom: 0%;
+	padding-left: 0%;
+}
