--- a/css/media.css
+++ b/css/media.css
@@ -6,18 +6,11 @@
   body {
    /* color: gray;*/
   }
-  .button1 {
-    left: 38%;
-    top: 67%;
-  }
-  .button2 {
-      left: 54%;
-      top: 67%;
-  }
   .headtext
   {
     padding-right: 45%;
   }
+ 
    .titleP
   {
     font-size: 350%;
@@ -33,42 +26,43 @@
     font-size: 300%;
     top: 3%;
   }
-   .logo{max-width: 50%;}
+   .logo{max-width: 3%;}
 }
-
 @media handheld, screen and (max-width: 1025px) {
 
   body {
     /*color: turquoise;*/
   }
-  .button1 {
-    left: 38%;
-    top: 67%;
-  }
-  .button2 {
-      left: 54%;
-      top: 67%;
-  }
-
   .headtext
   {
     padding-right: 36%;
+  }
+  .titlepic
+  {
+    margin-top: -6%;
   }
   #titleF
   {
     font-size: 275%;
     top: 3%;
   }
-}
+  .logo{max-width: 3%;}
 
+  #pad
+  {
+    padding-top: 0%;
+  }
+  #iamUNI
+  {
+    margin-bottom: 0%;
+  }
+}
 @media handheld, screen and (max-width: 900px) {
 
   body {
     font-size: 95%;
     /*color: yellow;*/
   }
-  .button1{ left: 36%; top: 55%;}
-  .button2{top: 55%;}
   .headtext
   {
     padding-right: 40%;
@@ -91,16 +85,8 @@
   }
   .iam{top: 23%;}
   .title{top: 20%;}
-  .button1 {
-    top: 47%;
-    left: 34%;
-    
-  }
-  .button2 {
-    top: 47%;
-    left: 54%;  
-  }
   .portpad{padding-right: 2%;}
+  .logo{max-width: 3%;}
 
 }
 @media handheld,screen and (max-width: 750px) {
@@ -120,14 +106,6 @@
   }
   .iam{top: 20%;}
   .title{top: 18%;}
-  .button1 {
-    top: 45%;
-    left: 33%;
-    
-  }
-  .button2 {
-    top: 45%;
-  }
   .headtext
   {
     padding-right: 36%;
@@ -157,11 +135,8 @@
     font-size: 82%;
     /*color: red;*/
   }
-  .button1{ }
-  .button2{  }
 
 }
-
 @media handheld,screen and (max-width: 600px) {
 
   body {
@@ -205,11 +180,6 @@
       top: 20%;
       font-size: 320%;
   }
-  .button1 {
-    top: 40%;
-    left: 31%;
-  }
-  .button2 {top:40%;}
 
   .headtext
   {
@@ -225,7 +195,6 @@
  
 
 }
-
 @media handheld,screen and (max-width: 550px) {
 
   body {
@@ -239,11 +208,6 @@
     top: 17%;
     font-size: 320%;
   }
-  .button1 {
-    top: 37%;
-    left: 30%;
-  }
-  .button2 {top: 37%;}
  
   .header {
     padding: 5px 20px 5px 40px;
@@ -255,7 +219,6 @@
   }
 
 }
-
 @media handheld,screen and (max-width: 497px) {
 
   body {
@@ -269,21 +232,11 @@
       top: 12%;
       font-size: 320%;
   }
-  .button1 {
-    top: 30%;
-    left: 28%;
-      
-  }
-  .button2 { top: 30%; }
 
   .header {
   padding: 5px 40px 5px 40px;
   }
 
-  .headtext
-  {
-    padding-right: 20%;
-  }
    .titleP
   {
     font-size: 250%;
@@ -299,7 +252,7 @@
     font-size: 200%;
     top: 3%;
   }
-  .logo{max-width: 4%;}
+  .logo{max-width: 3%;}
 
 }
 @media handheld,screen and (max-width: 449px) {
@@ -308,29 +261,22 @@
     padding-right: 12%;
   }
 }
-
-
-@media handheld,screen and (max-width: 412px) {
+@media handheld,screen and (max-width: 430px) {
 
   body {
     font-size: 80%;
    /* color: cyan;*/
   }
 
-  .iam{top: 8%;} 
   .title
   {
-      top: 10%;
+      padding-top: 1%;
       font-size: 260%;
   }
-  .button1 {
-    top: 25%;  
-    left: 22%;
-    font-size: 110%;
-  }
-  .button2 {
-    font-size: 110%;
-    top: 25%;
+
+  .titlepics
+  {
+    width: 60%;
   }
 
   .header {
@@ -338,37 +284,91 @@
   padding: 5px 20px 5px 40px;
   }
 
-  .headtext
-  {
-
-    padding-right: 25%;
-  }
   .cent{padding-bottom: 17%;}
 
   .titleP
   {
-    font-size: 200%;
-    top: 1%;
+    font-size: 350%;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    padding-left: 3%;
   }
+  /* .padP
+  {
+    padding-top: 0%;
+  } */
   #titleF
   {
-    font-size: 150%;
-    top: 3%;
+    font-size: 200%;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    padding-left: 3%;
   }
   #titleW
   {
-    font-size: 150%;
-    top: 3%;
+    font-size: 200%;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    padding-left: 3%;
   }
-  .logo{max-width: 4%;}
+  .logo{max-width: 3%;}
+
+  .iam
+  {
+    padding-top: 1%;
+    padding-bottom:0%;
+  }
+  #iamUNI
+  {
+    margin-bottom: 0%;
+  }
+
+  .back
+  {
+    /* max-width: auto; */
+    max-width: 200%;
+  }
+
+  .col
+  {
+    display: inline;
+  }
+
+  .column
+  {
+    width: 100%;
+  }
+  .middlepic
+  {
+    display: none;
+  }
 
 }
-@media handheld,screen and (max-width: 362px) {
+@media handheld,screen and (max-width: 380px) {
 
   .headtext
   {
 
     padding-right: 15%;
   }
+  .iam
+  {
+    padding-top: 0%;
+    padding-bottom:0%;
+  }
+  #iamUNI
+  {
+    margin-bottom: 0%;
+  }
+
+}
+@media handheld,screen and (max-width: 326px) {
+
+.title
+{
+  font-size: 200%;
+}
+
+
 
 }
