domain name changed

--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ footer {
 
 .titleP
 {
-    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    font-family: 'Open Sans',Futura, "Trebuchet MS", Arial, sans-serif;
     position: relative;
     font-size: 350%;
     color: black;
