--- a/css/style3.css
+++ b/css/style3.css
@@ -52,7 +52,7 @@
 
 #titleF
 {
-	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+	font-family: 'Open Sans',Futura, "Trebuchet MS", Arial, sans-serif;
     position: relative;
     font-size: 275%;
     color: black;
@@ -102,7 +102,7 @@
 
 #titleW
 {
-	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+	font-family: 'Open Sans',Futura, "Trebuchet MS", Arial, sans-serif;
     position: relative;
     font-size: 300%;
     color: black;
