--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   /* Set margin to 0 pixels on all sides */
   margin: 0px;
@@ -114,6 +118,7 @@ a:hover
 
 .col {
     font-family: Palatino,"Palatino Linotype","Palatino LT STD","Book Antiqua",Georgia,serif;
+    font-family: 'Open Sans',Verdana, Geneva, sans-serif;
     text-align: center;
     display: flex;
 }
@@ -133,6 +138,7 @@ a:hover
     right: 0px;
     bottom: auto;
     font-family: Georgia, Times, "Times New Roman", serif;
+    /*font-family: 'Open Sans',Verdana, Geneva, sans-serif;*/
     font-weight: bold;
     color: black;
     text-shadow: 0px 0px 2px white;
@@ -171,6 +177,25 @@ a:hover
   color: #12027c;
 }
 
+#eng_des
+{
+  padding-bottom: 1%;
+  margin-left: -5%;
+  font-size: 150%;
+}
+
+#hide1
+{
+  font-weight: normal;
+  width: 100%;
+}
+
+#temp
+{
+  padding-right: 100%;
+  box-sizing: border-box;
+  min-width: 50%;
+}
 
 footer {
   /* Set font color to white */
@@ -204,10 +229,10 @@ footer {
 .boxP {
     display: inline-block;
     background-color: white;
-    padding-bottom: 4%;
+    padding-bottom: 0%;
     padding-left: 8%;
     padding-right: 8%;
-    padding-top: 2%;
+    padding-top: 1%;
     
 
 }
@@ -221,4 +246,5 @@ footer {
 .middlepic
 {
   width: 80%;
+  border-radius: 30%;
 }
