--- a/css/style.css
+++ b/css/style.css
@@ -179,15 +179,16 @@ a:hover
 
 #eng_des
 {
-  padding-bottom: 1%;
-  margin-left: -5%;
-  font-size: 150%;
+  /*padding-bottom: 1%;
+  margin-left: -5%;*/
+  font-size: 50%;
 }
 
 #hide1
 {
   font-weight: normal;
   width: 100%;
+  /*display: none;*/
 }
 
 #temp
