--- a/archived/jul 22/style.css
+++ b/archived/jul 22/style.css
@@ -1,15 +1,25 @@
 html {
   scroll-behavior: smooth;
-
 }
 
 body {
+  /* Set margin to 0 pixels on all sides */
   margin: 0px;
+  /* Set font size to be 20 pixels */
   font-size: 20px;
+  /* Set line height to be 1.5 times larger than default */
+ /* line-height: 150%;*/
+
   text-align: justify;
+
+ /* background-image: url('../img/background.jpg');
+  background-size: contain;
+  background-repeat: no-repeat; */
+
 
 }
 header {
+   /*Set text alignment to center */
   text-align: center;
 
 }
@@ -100,7 +110,7 @@ a:hover
   /* position: relative; */
   max-width: 100%;
   height: auto;
-  opacity: 0.6;
+  opacity: 0.75;
   margin-top: -4%;
   padding-bottom: 10%;
 
@@ -127,8 +137,8 @@ a:hover
     top: 0;
     right: 0px;
     bottom: auto;
-    /* font-family: Georgia, Times, "Times New Roman", serif; */
-    font-family: 'Open Sans',Verdana, Geneva, sans-serif;
+    font-family: Georgia, Times, "Times New Roman", serif;
+    /*font-family: 'Open Sans',Verdana, Geneva, sans-serif;*/
     font-weight: bold;
     color: black;
     text-shadow: 0px 0px 2px white;
@@ -172,106 +182,20 @@ a:hover
   /*padding-bottom: 1%;
   margin-left: -5%;*/
   font-size: 50%;
-  
-  text-shadow:  0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white; 
-  /* width: 33%; */
-  /* align-self: center; */
-}
-#portgap1 {
-	padding-left:12%;
-	display:inline;
 }
 
-#eng_des:hover
-{
-	cursor: pointer;
-	
-	text-shadow:  0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080 !important;
-}
-
-#soft_dev
-{
-  /*padding-bottom: 1%;
-  margin-left: -5%;*/
-  font-size: 50%;
-  text-shadow:   0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white, 0 0 0.8em white;
-  /* width: 33%; */
-  /* align-self: center; */
-}
-#portgap2 {padding-left:5%; display:inline;}
-#portgap3 {padding-right:10%; display:inline;}
-
-#soft_dev:hover
-{
-	cursor: pointer;
-	text-shadow:  0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080, 0 0 0.8em #fff080 !important;
-	
-}
-
-#portTitle
-{
-	padding-top:3%;
-	padding-bottom:2%;
-	padding-right:0%;
-	width:100%;
-    text-align:left;
-	/* display:inline-block; */
-}
-#portTitle > div {
-    width: calc(100% / 6);  
-    /* display: inline-block; */
-    text-align:left;
-
-}
-
-#hide_eng
+#hide1
 {
   font-weight: normal;
   width: 100%;
   /*display: none;*/
 }
 
-.titleP
+#temp
 {
-    font-family: 'Open Sans',Futura, "Trebuchet MS", Arial, sans-serif;
-    position: relative;
-    font-size: 350%;
-    color: black;
-    text-shadow:  0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white;
-    /* left: 5%;
-    top: 5%; */
-    padding-left: 3%;
-	padding-right: 30%;
-	/* max-width: 30%; */
-	/* display: flex; */
-}
-
-.padP {padding-top: 12%;}
-
-.boxP {
-    display: inline-block;
-    background-color: white;
-    padding-bottom: 10%;
-    padding-left: 8%;
-    padding-right: 8%;
-    padding-top: 1%;
-
-}
-
-::-webkit-scrollbar { 
-    display: none; 
-}
-
-#matbox
-{
-  padding-bottom: 20%;
-
-}
-
-.middlepic
-{
-  width: 80%;
-  border-radius: 30%;
+  padding-right: 100%;
+  box-sizing: border-box;
+  min-width: 50%;
 }
 
 footer {
@@ -285,4 +209,43 @@ footer {
   text-align: center;
   /* Set margin on top to be 60 pixels */
   margin-top: 0px;
+}
+
+/*For portfolio and experience pages*/
+
+.titleP
+{
+    font-family: 'Open Sans',Futura, "Trebuchet MS", Arial, sans-serif;
+    position: relative;
+    font-size: 350%;
+    color: black;
+    text-shadow:  0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white, 0 0 0.2em white;
+    /* left: 5%;
+    top: 5%; */
+    padding-left: 3%;
+}
+
+.padP {padding-top: 12%;}
+
+.boxP {
+    display: inline-block;
+    background-color: white;
+    padding-bottom: 0%;
+    padding-left: 8%;
+    padding-right: 8%;
+    padding-top: 1%;
+    
+
+}
+
+#matbox
+{
+  padding-bottom: 20%;
+
+}
+
+.middlepic
+{
+  width: 80%;
+  border-radius: 30%;
 }
