--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 html {
   scroll-behavior: smooth;
-
+	overflow-x: hidden;
 }
 
 body {
   margin: 0px;
   font-size: 20px;
   text-align: justify;
-
+	overflow-x: hidden;
 }
 header {
   text-align: center;
@@ -132,7 +132,7 @@ a:hover
     font-weight: bold;
     color: black;
     text-shadow: 0px 0px 2px white;
-    padding: 5px 20px 5px 40px;
+    padding: 7px 20px 5px 40px;
     text-indent: 40px;
     white-space: pre-wrap;
     z-index: 5;
@@ -259,6 +259,14 @@ a:hover
 
 ::-webkit-scrollbar { 
     display: none; 
+}
+
+.imgCenter{text-align:center;}
+
+.flightAlign 
+{
+	padding-right: 4%; 
+	display:inline;
 }
 
 #matbox
