--- a/css/style3.css
+++ b/css/style3.css
@@ -1,54 +1,12 @@
-#trax
-{
-	max-width: 45%;
-	padding-left: 6%;
-	padding-right: 6%;
-}
+.text{text-align: center,justify;}
 
-#mac
-{
-	max-width: 27%;
-}
-
-.text
-{
-	text-align: center,justify;
-
-}
-
-#autocad
-{
-	padding-top: 3%;
-	padding-left: 25%;
-	max-width: 50%;
-}
-
-#auto2
-{
-	max-width: 50%;
-	padding-left: 6%;
-	padding-right: 6%;
-}
-
-#trax2
-{
-	max-width: 20%;
-	padding-top: 2%;
-}
-
-#mac2
-{
-	padding-top: 2%;
-	padding-left: 27%;
-	padding-right: 6%;
-	max-width: 15%;
-}
-
-#mac3
-{
-	padding-top: 2%;
-	max-width: 27%;
-}
+#trax{max-width: 45%;}
+#mac{max-width: 27%;}
+#autocad{max-width: 50%;}
+#auto2{	max-width: 50%;}
+#trax2{	max-width: 20%;}
+#mac2{	max-width: 15%;}
+#mac3{	max-width: 27%;}
 
 #titleF
 {
@@ -62,43 +20,17 @@
 	padding-left: 3%;
 }
 
-#fridge1
-{
-	padding-top: 2%;
-	max-width: 30%;
-	padding-right: 5%;
-	padding-left: 16%;
-}
-
-#fridge2
-{
-	max-width: 30%;
-}
-
-#fridge3
-{
-	max-width: 40%;
-	padding-right: 6%;
-	padding-left: 7%;
-	padding-top: 3%;
-}
-
+#fridge1{max-width: 30%;}
+#fridge2{max-width: 30%;}
+#fridge3{max-width: 40%;}
 #fridge4
 {
 	max-width: 30%;
+	border:solid;
+	border-width:1px;
 }
-
-#fridge5
-{
-	max-width: 25%;
-	padding-top: 2%;
-	padding-left: 25%;
-}
-
-#fridge6
-{
-	max-width: 25%;
-}
+#fridge5{max-width: 25%;}
+#fridge6{max-width: 25%;}
 
 #titleW
 {
@@ -120,10 +52,7 @@
 	padding-right: 6%;
 }
 
-#winds
-{
-	max-width: 25%;
-}
+#winds{	max-width: 25%;}
 
 #winds2
 {
@@ -133,8 +62,7 @@
 	padding-right: 6%;
 }
 
-#winds3
-{
+#winds3{
 	max-width: 20%;
 	padding-top: 2%;
 }
@@ -144,6 +72,7 @@
 	max-width: 1.333%;
 	padding-right: 0.5%;
 	padding-left: 0%;
+	padding-top:2px;
 }
 
 .logodown
@@ -163,94 +92,31 @@
 }
 
 
-#robot1
-{
-	padding-left: 19%;
-	padding-bottom: 2%;
-	max-width: 30%;
-}
-#robot2
-{
-	padding-left: 2%;
-	max-width: 30%;
-}
-#robot3
-{
-	padding-left: 10%;
-	padding-bottom: 5%;
-	max-width: 15%;
-}
-#robot4
-{
-	padding-left: 5%;
-	padding-bottom: 3%;
-	max-width: 20%;
-}
-#robot5
-{
-	padding-left: 5%;
-	max-width: 30%;
-}
-#robot6
-{
-	padding-left: 17%;
-	padding-bottom: 1%;
-	max-width: 30%;
-}
-#robot7
-{
-	padding-left: 2%;
-	max-width: 30%;
-}
-#robot8
-{
-	padding-left: 9%;
-	padding-top: 2%;
-	max-width: 80%;
-}
+#robot1{max-width: 30%;}
+#robot2{max-width: 30%;}
+#robot3{max-width: 15%;}
+#robot4{max-width: 20%;}
+#robot5{max-width: 30%;}
+#robot6{max-width: 30%;}
+#robot7{max-width: 30%;}
+#robot8{max-width: 80%;}
+#robot9{max-width: 50%;}
 
-#robot9
-{
-	padding-left: 27%;
-	max-width: 50%;
-}
-
-.imgCenter
-{
-	text-align: center;
-}
-#planets1
-{
-	max-width: 30%;
-	display: inline-block;
-}
-#planets2
-{
-	display: inline-block;
+#planets1{max-width: 30%;}
+#planets2{
 	max-width: 100%;
 	padding-bottom: 8%;
-	padding-left: 1%;
 }
-#planets3
-{
-	display: inline-block;
-	max-width: 100%;
+#planets3{max-width: 100%;}
+#planets4{
+	max-width: 40%;
+	border:solid;
+	border-width:1px;
 }
-#planets4
-{
-	display: inline-block;
-	max-width: 50%;
-	padding-left: 4%;
+#planets5{
+	max-width: 40%;
+	padding-bottom:3%;
+	border:solid;
+	border-width:1px;
 }
-#planets5
-{
-	display: inline-block;
-	max-width: 50%;
-	padding-bottom: 5%;
-}
-#planets6
-{
-	display: inline-block;
-	max-width: 100%;
-}
-
+#planets6{max-width: 100%;}
