--- a/css/style4.css
+++ b/css/style4.css
@@ -1,18 +1,6 @@
-.imgCenter
-{
-    text-align:center;
-}
-.flight1
-{
-	display: inline-block;
-    padding-right: 4%;
-    max-width: 45%;
-}
-.flight2
-{
-	display: inline-block;
-    max-width: 45%;
-}
+
+.flight1,.flight2 { max-width: 45%;}
+
 .flight3
 {
 	max-width: 100%;
@@ -25,32 +13,34 @@
 }
 #flight4
 {
-	display: inline-block;
 	max-width: 30%;
-	padding-right: 3%;
 	padding-bottom: 7%;
 }
 #flight5
 {
-	display: inline-block;
 	max-width: 40%;
 }
 #flight6
 {
-	display: inline-block;
 	max-width: 40%;
 	padding-bottom: 6%;
-	padding-right: 4%;
 }
 #flight7
 {
-	display: inline-block;
 	max-width: 40%;
+}
+
+#flight8
+{
+	display: inline-block;
+	max-width: 50%;
 }
 
 .flight9
 {
 	max-width: 90%;
+	border:solid;
+	border-width: 1px;
 }
 #flight10
 {
@@ -59,4 +49,14 @@
 #flight11
 {
 	max-width: 90%;
+}
+#flight12
+{
+	max-width: 90%;
+}
+
+.math
+{
+	max-width:100%;
+	/* font-size:50%; */
 }
