--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 html {
   scroll-behavior: smooth;
-	overflow-x: hidden;
+	/* overflow-x: hidden; */
 }
 
 body {
   margin: 0px;
   font-size: 20px;
   text-align: justify;
-	overflow-x: hidden;
+	/* overflow-x: hidden; */
 }
 header {
   text-align: center;
@@ -80,7 +80,10 @@ a:hover
 .titlepics
 {
   border: 2px solid black;
-  border-radius: 100%;
+  border-radius: 10%;
+  
+  /* -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(90%, transparent) ,to(rgba(250, 250, 250, 0.6))); */
+  
   width: 23%;
 }
 
@@ -138,6 +141,7 @@ a:hover
     z-index: 5;
     box-shadow: 1px 2px 3px #D8D8D8;
     font-size: 115%;
+	
 }
 
 .box {
@@ -149,7 +153,8 @@ a:hover
 
 .intro
 {
-  font-family: Cambria, Georgia, serif;
+  /* font-family: Cambria, Georgia, serif; */
+  font-family: 'Open Sans',Verdana, Geneva, sans-serif;
   text-align: center;
   font-style: italic;
   /*font-weight: bold;*/
@@ -278,7 +283,8 @@ a:hover
 .middlepic
 {
   width: 80%;
-  border-radius: 30%;
+  border-radius: 5%;
+  -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(90%, transparent) ,to(rgba(250, 250, 250, 0.6)));
 }
 
 footer {
