--- a/css/style2.css
+++ b/css/style2.css
@@ -13,16 +13,20 @@ h2
   max-width: 100%;
   height: auto;
   opacity: 1;
-  border: solid;
+  /* border: solid; */
   border-width: 2px;
-  border-radius: 20%;
+  border-radius: 5%;
+    -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(90%, transparent) ,to(rgba(250, 250, 250, 0.6)));
 }
+
+
 
 img.portpics:hover
 {
   opacity: 0.4;
   cursor: pointer;
   
+
 }
 
 .cont {
@@ -140,4 +144,65 @@ img.portpics:hover
     padding: 10px 0;
     height: 300px;
     font-family: Cambria, Georgia, serif;
+}
+
+
+
+
+
+
+.portpicsx
+{
+  max-width: 30%;
+  height: auto;
+  opacity: 1;
+  border-radius: 5%;
+    -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(90%, transparent) ,to(rgba(250, 250, 250, 0.6)));
+}
+
+
+img.portpicsx:hover
+{
+  opacity: 0.4;
+  cursor: pointer;
+  
+
+}
+.conts {
+  position: relative;
+  max-width: 30%;
+  height: auto;
+  z-index: 2;
+  color:#12027c;
+  /* float: left; */
+  padding-bottom: 2%;
+}
+
+/* .conts:not(:last-child){ */
+  /* margin-right: 3%; */
+/* } */
+
+.cents {
+  /* font-family: Georgia, Times, "Times New Roman", serif; */
+  font-family: 'Open Sans',Verdana, Geneva, sans-serif;
+  font-weight: bold;
+  color: #12027c;
+  position: absolute;
+
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding-bottom: 10%;
+
+  z-index: -1;
+
+  visibility: hidden;
+  opacity: 0;
+  text-align: center;
+}
+
+.conts:hover .cents {
+  visibility: visible;
+  opacity: 1;
+  
 }
