--- a/css/media.css
+++ b/css/media.css
@@ -166,9 +166,10 @@
 
 }
 @media handheld,screen and (max-width: 600px) {
-
+  html {overflow-x:hidden;}
   body {
     font-size: 80%;
+    overflow-x:hidden;
     /*color: orange;*/
   }
 
