--- a/css/media.css
+++ b/css/media.css
@@ -13,9 +13,6 @@
 /* Change features as page size decreases*/
 @media handheld, screen and (max-width: 1190px) {
 
-  body {
-   /* color: gray;*/
-  }
   .headtext
   {
     padding-right: 45%;
@@ -51,9 +48,6 @@
 }
 @media handheld, screen and (max-width: 1025px) {
 
-  body {
-    /*color: turquoise;*/
-  }
   .header
   {
     font-size: 130%;
@@ -96,6 +90,8 @@
     padding-right: 40%;
   }
 
+  #SP1 {  display:none; }
+  #SP3 {  max-width: 50%;}
 }
 @media handheld,screen and (max-width: 850px) {
 
@@ -117,6 +113,7 @@
   .logo{max-width: 3%;}
   .back{max-width:150%;}
 	.boxP {width:auto;}
+
 }
 @media handheld,screen and (max-width: 750px) {
 
@@ -126,7 +123,6 @@
   }
   
   .math	{ font-size:80%;}
-  
 
 }
 @media handheld,screen and (max-width: 700px) {
@@ -159,7 +155,7 @@
     top: 3%;
   }
 
-}
+ }
 @media handheld,screen and (max-width: 650px) {
 
   body {
